refaoctor: 숙소 서비스 리팩토링